# salomao

./: .gitignore  AGENTS.md  PLANS.md  README.md  Sistema Salomao.spec  consolidar_financeiro.py  diagnose_startup.py  run_log.txt  run_log_prod_new.txt  setup-tailscale-nginx.sh  update_env.py
backend/: .env.dev.example  .env.example  alembic.ini  list_tables.py  pyproject.toml  scratch_debug_brands.py
backend/alembic/: env.py
backend/alembic/versions/: 20260325_0001_baseline.py  20260326_0002_mfa_trusted_devices.py  20260328_0003_report_layouts.py  20260328_0004_report_layout_dashboard_flag.py  20260328_0005_report_layout_percent_config.py  20260329_0006_purchase_season_restructure.py  20260330_0007_purchase_brand_payment_term.py  20260330_0008_supplier_purchase_invoice_flag.py  20260330_0009_supplier_purchase_history_backfill.py  20260331_0010_supplier_ignore_purchase_planning.py  20260331_0011_purchase_returns.py  20260407_0018_linx_customers.py  (+24 more)
backend/app/: main.py
backend/scripts/: backfill_purchase_installment_entries.py  backup_postgres.py  export_category_counts_xlsx.py  import_planilha_sem_titulo.py  migrate_sqlite_to_postgres.py  restore_postgres.py  update_purchase_issue_dates_from_xlsx.py  update_purchase_issue_dates_postgres.py
backend/tests/: conftest.py  test_account_balance_exclusions.py  test_accounts_regression.py  test_analytics_hybrid.py  test_api_first_refresh_routes.py  test_auth_trusted_devices.py  test_boleto_c6_settlement_routes.py  test_boletos.py  test_bootstrap_admin.py  test_c6_api_endpoints.py  test_c6_client.py  test_cache_invalidation.py  test_cashflow_cache.py  test_categories.py  test_config_security.py  test_dashboard_birthdays.py  test_dashboard_cache.py  test_data_refresh.py  test_entries_filters.py  test_financial_calculations.py  test_historical_cashbook_import.py  test_imports_ofx_regression.py  test_inter_api_endpoints.py  test_inter_boleto_issue.py  test_inter_boleto_sync.py  test_inter_client.py  test_inter_statement_sync.py  test_linx_auto_sync.py  test_linx_auto_sync_refresh_job.py  test_linx_customer_birthdays.py  test_linx_customers.py  test_linx_movements.py  test_linx_open_receivables.py  test_linx_products.py  test_linx_purchase_payables.py  test_linx_receivable_settlement.py  test_linx_sync.py  test_purchase_planning.py  test_receivables_snapshot.py  test_report_layouts.py  (+4 more)
(+257 files in other folders)
